添加忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,23 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+project/win/obj/libos/Win32/Debug/libos.dll.recipe
+project/win/obj/libos/Win32/Debug/libos.log
+project/win/obj/libos/Win32/Debug/libos.tlog/CL.command.1.tlog
+project/win/obj/libos/Win32/Debug/libos.tlog/CL.read.1.tlog
+project/win/obj/libos/Win32/Debug/libos.tlog/CL.write.1.tlog
+project/win/obj/libos/Win32/Debug/libos.tlog/libos.lastbuildstate
+project/win/obj/libos/Win32/Debug/libos.tlog/libos.write.1u.tlog
+project/win/obj/libos/Win32/Debug/libos.tlog/link.command.1.tlog
+project/win/obj/libos/Win32/Debug/libos.tlog/link.read.1.tlog
+project/win/obj/libos/Win32/Debug/libos.tlog/link.write.1.tlog
+project/win/obj/libos/x64/Debug/libos.dll.recipe
+project/win/obj/libos/x64/Debug/libos.log
+project/win/obj/libos/x64/Debug/libos.tlog/CL.command.1.tlog
+project/win/obj/libos/x64/Debug/libos.tlog/CL.read.1.tlog
+project/win/obj/libos/x64/Debug/libos.tlog/CL.write.1.tlog
+project/win/obj/libos/x64/Debug/libos.tlog/libos.lastbuildstate
+project/win/obj/libos/x64/Debug/libos.tlog/libos.write.1u.tlog
+project/win/obj/libos/x64/Debug/libos.tlog/link.command.1.tlog
+project/win/obj/libos/x64/Debug/libos.tlog/link.read.1.tlog
+project/win/obj/libos/x64/Debug/libos.tlog/link.write.1.tlog
