--- a/.gitignore
+++ b/.gitignore
@@ -1,72 +1,20 @@
-# Prerequisites
-*.d
-
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
+project/vs/obj
+*.db
+*.db-shm
+*.db-wal
+*.ipch
+*.log
+*.opendb
 *.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+*.so
+*.suo
+*.tlog
+*.user
 
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
-project/win/obj/libos/Win32/Debug/libos.dll.recipe
-project/win/obj/libos/Win32/Debug/libos.log
-project/win/obj/libos/Win32/Debug/libos.tlog/CL.command.1.tlog
-project/win/obj/libos/Win32/Debug/libos.tlog/CL.read.1.tlog
-project/win/obj/libos/Win32/Debug/libos.tlog/CL.write.1.tlog
-project/win/obj/libos/Win32/Debug/libos.tlog/libos.lastbuildstate
-project/win/obj/libos/Win32/Debug/libos.tlog/libos.write.1u.tlog
-project/win/obj/libos/Win32/Debug/libos.tlog/link.command.1.tlog
-project/win/obj/libos/Win32/Debug/libos.tlog/link.read.1.tlog
-project/win/obj/libos/Win32/Debug/libos.tlog/link.write.1.tlog
-project/win/obj/libos/x64/Debug/libos.dll.recipe
-project/win/obj/libos/x64/Debug/libos.log
-project/win/obj/libos/x64/Debug/libos.tlog/CL.command.1.tlog
-project/win/obj/libos/x64/Debug/libos.tlog/CL.read.1.tlog
-project/win/obj/libos/x64/Debug/libos.tlog/CL.write.1.tlog
-project/win/obj/libos/x64/Debug/libos.tlog/libos.lastbuildstate
-project/win/obj/libos/x64/Debug/libos.tlog/libos.write.1u.tlog
-project/win/obj/libos/x64/Debug/libos.tlog/link.command.1.tlog
-project/win/obj/libos/x64/Debug/libos.tlog/link.read.1.tlog
-project/win/obj/libos/x64/Debug/libos.tlog/link.write.1.tlog
+out/
+.vs/
+obj/
+lib/
+bin/
+project/vs/readme/
+CMakeSettings.json
