简单实现哈希表

--- a/project/linux/libos.vcxproj
+++ b/project/linux/libos.vcxproj
@@ -164,12 +164,14 @@
   </PropertyGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\dlist.c" />
+    <ClCompile Include="..\..\src\hashtable.c" />
     <ClCompile Include="..\..\src\mutex.c" />
     <ClCompile Include="..\..\src\log.c" />
     <ClCompile Include="..\..\src\queue.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\libos.h" />
+    <ClInclude Include="..\..\src\uthash\uthash.h" />
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <ClCompile>
